--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -4,7 +4,8 @@
   align-items: center;
   padding-top: 10px;
   box-shadow: 0 0 10px #c6cccced;
-  margin-top: 30px;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .title {
